--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Crie e compartilhe seu evento</h1>
-    <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
-  </header>
-  <form></form>
+  <div class="page">
+    <header>
+      <h1>Crie e compartilhe seu evento</h1>
+      <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
+    </header>
+    <form></form>
+  </div>
 </body>
 </html>
