--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
       </fieldset>
 
     </form>
+
+    <footer>
+      <input class="button" type="submit" value="Salvar evento">
+    </footer>
+  
   </div>
+  
 </body>
 </html>
