--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
       <h1>Crie e compartilhe seu evento</h1>
       <p>O primeiro passo, é preencher esse formulário de inscrição.</p>
     </header>
-    <form>
+    <form id="my-form">
       <fieldset>
         <div class="fieldset-wrapper">
           <legend>Informações do Evento</legend>
   
           <div class="input-wrapper">
             <label for="event-title">Título do evento <span>(mínimo 8 caracteres)</span></label>
-            <input type="text" id="event-title">
+            <input type="text" id="event-title"
+            required
+            minlength="8" />
           </div>
   
           <div class="input-wrapper">
@@ -62,7 +64,9 @@
 
           <div class="input-wrapper">
             <label for="event-password">Senha de acesso para os participantes <span>(mínimo 8 caracteres)</span></label>
-            <input type="password" id="event-password">
+            <input type="password" id="event-password"
+            required
+            minlength="8" />
           </div>
 
           <div class="checkbox-wrapper">
@@ -100,7 +104,10 @@
     </form>
 
     <footer>
-      <input class="button" type="submit" value="Salvar evento">
+      <input class="button" 
+      type="submit" 
+      form="my-form"
+      value="Salvar evento">
     </footer>
   
   </div>
